# picrin

cmake/: FindMECAB.cmake
contrib/30.mecab/: CMakeLists.txt
contrib/30.mecab/src/: mecab.c
piclib/: built-in.scm
